--- a/Resources/views/AuditFormField/edit.html.twig
+++ b/Resources/views/AuditFormField/edit.html.twig
@@ -27,7 +27,7 @@
                     <li>
                         <a class="audit-form-delete" 
                            href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}">
-                            <i class="icon-trash"></i> Delete Field
+                            <i class="icon-trash"></i> Delete
                         </a>
                     </li>
                 </ul>
