--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -10,30 +10,32 @@
         <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css' />
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet" />
         <style type="text/css">
-            body * {
-                font-family: 'Orienta', sans-serif;
-            }
-            body {
-                padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-            }
+        body * {
+            font-family: 'Orienta', sans-serif;
+        }
+        body {
+            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        }
+        #overlay {
+        display:none;
+        width:400px;
+        border:10px solid #666;
+        border:10px solid rgba(82, 82, 82, 0.698);
+        -moz-border-radius:8px;
+        -webkit-border-radius:8px;
+        }
+        #overlay div {
+          padding:10px;
+          border:1px solid #3B5998;
+          background-color:#fff;
+          font-family:"lucida grande",tahoma,verdana,arial,sans-serif
+        }
         </style>
     {% endblock %}
     {% block javascripts %}
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
             <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
-            <script>
-            $('#modal').modal({
-                    backdrop: true,
-                    keyboard: true
-                }).css({
-                   'width': function () {
-                       return ($(document).width() * .9) + 'px';
-                   },
-                   'margin-left': function () {
-                       return -($(this).width() / 2);
-                   }
-            });
-            </script>
+            <script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script>
             <script src="{{ asset( 'bundles/wgaudit/js/wgaudit.js' ) }}" type="text/javascript"></script>
     {% endblock %}
   </head>
@@ -71,20 +73,12 @@
       </div>
     </div>
     {% endblock %}
-    {% block body %}{% endblock %}
-  </body>
-    <div id="modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="icon-remove"></i> </button>
-            <h3 id="myModalLabel">Modal header</h3>
-        </div>
-        <div class="modal-body">
-            <p>One fine body…</p>
-        </div>
-    <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    {% block body %}
+    <div class="apple_overlay" id="overlay-box">
+        <div class="contentWrap"></div>
     </div>
-</div>
+    {% endblock %}
+  </body>
 </html>
 
 
